bootstrap4: fix collapsable panels
Change all panel classes to cards.

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,10 @@ body > * {
   }
 }
 
+.card-header > a {
+    color: inherit;
+}
+
 /** Navbar formatting **/
 
 
